# leafwing_abilities

./: .gitignore  Cargo.toml  README.md  RELEASES.md
examples/: cooldown.rs
macros/: Cargo.toml
macros/src/: abilitylike.rs  lib.rs
src/: ability_state.rs  charges.rs  cooldown.rs  lib.rs  plugin.rs  pool.rs  premade_pools.rs  systems.rs
tests/: cooldowns.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
