[package]
name = "leafwing_abilities"
description = "A convenient, well-tested ability management suite. Built for the Bevy game engine."
version = "0.3.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing-input-manager"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci", "macros"]

[features]
default = ["premade_pools"]
# Premade life and mana resource pools to get you started
premade_pools = []

[dependencies]
bevy = {version = "0.10", default-features = false, features = ["serialize", "bevy_gilrs"]}
serde = {version = "1.0", features = ["derive"]}
leafwing-input-manager = "0.9"

leafwing_abilities_macros = { path = "macros", version = "0.3" }
thiserror = "1.0.37"
derive_more = "0.99.17"

[dev-dependencies]
bevy = {version = "0.10", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_render", "bevy_core_pipeline", "x11"]}
